--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,3 +69,29 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+@media screen and (max-width: 768px), screen and (max-width: 575px) {
+  .row {
+    width:  auto;
+    margin-top: 20px;
+  }
+
+  
+  .saveBtn {
+    border: 0;
+   
+    height: 60px;
+    padding-left: 7px;
+  }
+
+  textarea {
+    width: auto;
+    height: 60px;
+  }
+  .hour {
+   
+    padding-left: 0px;
+    font-size: 15px;
+    text-align: center;
+  }
+  
+}
